--- a/_config.yml
+++ b/_config.yml
@@ -23,6 +23,7 @@ twitter_username: username
 github_username: username
 minimal_mistakes_skin: dark
 search: true
+url: "http://smonge.com"
 
 # Build settings
 markdown: kramdown
@@ -118,4 +119,4 @@ head_scripts:
 comments:
  provider: "discourse"
  discourse:
-  server: forum.ytpmania.net
+  server: forum.smonge.com
