--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -1,23 +1,13 @@
 # Authors
 
-Billy Rick:
-  name        : "Billy Rick"
-  bio         : "What do you want, jewels? I am a very extravagant man."
-  avatar      : "/assets/images/bio-photo-2.jpg"
-  links:
-    - label: "Email"
-      icon: "fas fa-fw fa-envelope-square"
-      url: "mailto:billyrick@rick.com"
-    - label: "Website"
-      icon: "fas fa-fw fa-link"
-      url: "https://thewhip.com"
-    - label: "Twitter"
-      icon: "fab fa-fw fa-twitter-square"
-      url: "https://twitter.com/extravagantman"
+CptnSmonge:
+  name        : "Smonge"
+  bio         : "Sysop and owner of YTPMania"
+  avatar      : "/assets/images/ytpmania/admin/avatars/dagoth.jpg"
 
-Cornelius Fiddlebone:
-  name        : "Cornelius Fiddlebone"
-  bio         : "I ordered what?"
+Daddy Dagoth:
+  name        : "Voryn"
+  bio         : "Come, Nerevar, friend or traitor come. Come and look upon the heart, and upon Akulukhan. And bring Wraithguard, I have need of it."
   avatar      : "/assets/images/bio-photo.jpg"
   links:
     - label: "Email"
